<!--
  ~ Copyright (c) 2021 Kevin Phillips, Mission Church of Our Lord Jesus Christ
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MCC</string>
    <string name="app_name_long">Mission Church of Christ</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="mission_church">Mission Church</string>
    <string name="google_api_key_fmc">AIzaSyCxIzFEV5kl85iHqSmmYFHaPqmbg5EHpx4</string>
<!--    <string name="facebook_app_id">120085814675079</string>-->
<!--    <string name="facebook_app_id">310721156779230</string>-->
    <string name="facebook_app_id">310721156779230</string>
    <string name="fb_login_protocol_scheme">fb310721156779230</string>

<!--    <string name="fb_login_protocol_scheme">fb166447543925440</string>-->


    <string-array name="models_details">
        <item>
            We believe in Jesus because he is our salvation from our sins. He is the only one that
            paid the price for us to escape the eternal damnation from our sins.
        </item>
        <item>
            We have various church values that are connected to our church. Some of the key values are: praise,
            worship, ministry and love.
        </item>
        <item>
            Ministry is the work and opportunity that God allows us
            to partake in pertaining to his kingdom.  Ministry is important because it allows us
            to overcome our legacy, the negative from our past and ourselves that would have
            produced bad fruit in our futures. Ministry helps us produce good spiritually and
            naturally as we move forward in our lives.
        </item>
        <item>
            Pending more info…
        </item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>
        <item>Pending more info…</item>

    </string-array>

    <string-array name="models_titles">
        <item>About Us</item>
        <item>Our Values</item>
        <item>Ministry Over Legacy</item>
        <item>Prayer</item>
        <item>Title</item>
        <item>Title</item>
        <item>Title</item>
        <item>Title</item>
        <item>Title</item>
        <item>Title</item>
        <item>Title</item>
        <item>Title</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="post_title">The Spirit of Envy Prayer Service</string>
    <string name="post_date">November 21, 2017</string>
    <string name="sample_content">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly believable…</string>


    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">LongLongLong LongLongLong</string>
    <string name="default_web_client_id">NULL</string>

</resources>
