<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Kevin Phillips, Mission Church of Our Lord Jesus Christ
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<!-- TODO: flatten hierarchy-->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="15dp">

        <ImageView
            android:id="@+id/post_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_launcher_mcc_2020" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/post_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/post_title"
                android:textColor="@color/default_dark_text_color"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/post_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/post_date"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/sample_content"
                android:textColor="@color/default_dark_text_color"
                android:textSize="@dimen/normal_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:drawableLeft="@drawable/ic_favorite"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/grey"
                    android:text="1" />

                <TextView
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:drawableLeft="@drawable/ic_view"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/grey"
                    android:text="21" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</layout>