<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Kevin Phillips, Mission Church of Our Lord Jesus Christ
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- TODO: flatten hierarchy-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp"
        tools:context="com.missionchurchcooljc.mcc.users.login.LoginActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:src="@drawable/ic_arrow_back_24dp"
            android:background="@android:color/transparent"
            android:padding="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_below="@+id/btn_back"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">


            <ImageView
                android:src="@mipmap/ic_launcher_mcc_2020"
                android:layout_gravity="left"
                android:layout_width="80dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/label_welcome_title"
                android:textColor="@color/black"
                android:textSize="@dimen/largest_text_size"
                android:text="Welcome to"
                android:layout_gravity="bottom"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/largest_text_size"
                android:text="@string/mission_church"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_login"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/normal_text_size"
                android:text="Reset Password"
                android:layout_gravity="bottom"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/email"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="@dimen/default_width_height" />


            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_width_height"
                android:elevation="3dp"
                android:text="Reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="20dp" />


            <Button
                android:text="@string/continue_with_google"
                android:id="@+id/btn_google"
                android:textSize="@dimen/normal_text_size"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_search"
                android:background="@color/white"
                android:textColor="@color/default_text_color"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:visibility="invisible"
                android:layout_marginLeft="3dp"
                android:elevation="3dp"
                android:padding="15dp"
                android:layout_height="@dimen/button_height" />

            <Button
                android:text="@string/continue_with_facebook"
                android:id="@+id/btn_facebook_sign"
                android:textSize="@dimen/normal_text_size"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_if_facebook"
                android:drawablePadding="10dp"
                android:background="@color/white"
                android:visibility="invisible"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:textColor="@color/default_text_color"
                android:elevation="3dp"
                android:padding="15dp"
                android:layout_height="@dimen/button_height" />

            <TextView
                android:id="@+id/label_forget_password"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:visibility="invisible"
                android:textSize="@dimen/normal_text_size"
                android:text="forget password?"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </RelativeLayout>
</layout>